@@ -7,6 +7,7 @@
 2015-05-03  6.9.1-3 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed bug with "-define png:format=x" in png.c, introduced in version
     6.8.9-0, that caused the define to be ignored.
+  * Replaced some dead code in ReadJNGImage with an assert().
 
 2015-04-20  6.9.1-3 Cristy  <quetzlzacatenango@image...>
   * Support -define compose:clamp=false option (reference
